# videoindexer-samples-python

./: .gitignore  LICENSE  README.md  avam_token.py  delete_videos.py  download_all_insights.py  download_all_thumbnails.py  list_videos.py  pyproject.toml  upload_video.py  utils.py
.github/workflows/: ci.yml
samples/: delete_videos.py  download_all_insights.py  download_all_thumbnails.py  list_videos.py  pyproject.toml  utils.py
scripts/: build_sdk.sh  pyproject.toml
sdk/: build_sdk.sh  fix_swagger.py
videoindexer/: README.md  setup.py
videoindexer/docs/: Account.md  AccountAmsInfo.md  AccountBrandsCustomizationSettings.md  AccountEncryptionKeyContract.md  AccountMediaServicesAadConnectionContract.md  AccountMediaServicesUpdateContract.md  AccountQuotaUsage.md  AccountSlim.md  AccountState.md  AccountStatistics.md  AccountUser.md  AmsConnectionInfo.md  AnimatedCharacterInsight.md  AnimatedCharacterInsightInstance.md  AnimatedCharacterInsightThumbnail.md  AnimationApi.md  AnimationModel.md  AnimationModelTrainingOperation.md  AnimationModelTrainingOperationResult.md  AnimationModelTrainingStatus.md  AsyncOperationState.md  AudioEffectInsight.md  AudioEffectType.md  BlockInsight.md  BrandInsight.md  BrandInsightInstance.md  BrandReferenceType.md  BrandsApi.md  ClapperboardDetails.md  ClapperboardInsight.md  ClassicAccountAccessTokensApi.md  ClassicAccountsApi.md  ComputerVisionCharacterInput.md  ComputerVisionConnectionContract.md  ComputerVisionConnectionInput.md  ComputerVisionModelInput.md  CreateOrUpdateProjectRequest.md  CustomBrand.md  CustomLanguageModel.md  CustomLanguageModelTrainingDataFile.md  (+119 more)
videoindexer/test/: test_account.py  test_account_ams_info.py  test_account_brands_customization_settings.py  test_account_encryption_key_contract.py  test_account_media_services_aad_connection_contract.py  test_account_media_services_update_contract.py  test_account_quota_usage.py  test_account_slim.py  test_account_state.py  test_account_statistics.py  test_account_user.py  test_ams_connection_info.py  test_animated_character_insight.py  test_animated_character_insight_instance.py  test_animation_api.py  (+144 more)
(+165 files in other folders)
